Created Video Game Table, controller, and migrattion

--- a/Contemp_FInal_Project/appsettings.json
+++ b/Contemp_FInal_Project/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Context": "Server=(localdb)\\mssqllocaldb;Database=Context-bf711752-ca5a-474a-8a0e-3705b80952ce;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
