--- a/Contemp_FInal_Project/appsettings.json
+++ b/Contemp_FInal_Project/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Contemp_FInal_ProjectContext": "Server=(localdb)\\mssqllocaldb;Database=Contemp_FInal_ProjectContext-bb1d3891-8310-4cc4-8efd-31ab10d21455;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
