--- a/Contemp_FInal_Project/appsettings.json
+++ b/Contemp_FInal_Project/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Contemp_FInal_ProjectContext": "Server=(localdb)\\mssqllocaldb;Database=Contemp_FInal_ProjectContext-4157ed5f-9e99-4fe9-8943-819ae99efb4e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
